<resources>
    <string name="facebook_app_id">1080149632075467</string>
    <string name="app_name">Clic</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_catogories">Clic Serve</string>
    <string name="title_activity_click_menu">Clic Products</string>
    <string name="title_activity_add_clic_product">AddClicProductActivity</string>

    <!--SingupActivity-->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_search">Search</string>
    <string name="btn_sign_up">SignUp</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_mobile_notexist">Moibile number already exist!</string>
    <string name="err_msg_mobile">Enter Mobile Number</string>
    <string name="err_msg_mobile_limit">Mobile number must be greater than 10</string>
    <string name="clic_username">UserName</string>
    <string name="clic_password">PassWord</string>
    <string name="clic_ClientID">ClientID</string>
    <string name="clic_SharedClientID">SharedClientID</string>
    <string name="clic_usertype">userType</string>
    <string name="clic_guest">Guest</string>
    <string name="txt_signup_des">Don\'t have an account?</string>
    <string name="txt_signup">Sign up</string>
    <string name="txt_signin_des">Already having an account?</string>
    <string name="txt_signin">Sign In</string>

    <!-- Main Activity Clic-->
    <string name="activity_service_req">ServiceRequest</string>
    <string name="activity_demo_req">DemoRequest</string>
    <string name="activity_service_req_addProduct">Add Product</string>
    <string name="activity_service_req_addReq">Add Request</string>
    <string name="activity_type">TypeOfActivity</string>
    <string name="activity_upload_docs">UploadDocs</string>
    <string name="activity_callback">Callback</string>
    <string name="activity_know_more">KnowMore</string>
    <string name="is_product_exit">ProductExist</string>

    <string name="schedule_serReq">TypeOfScheduleReq</string>
    <string name="schedule_reqReq">TypeOfSchedulereqReq</string>


    <!--AddClicProduct-->
    <string name="user_item">UserItem</string>
    <string name="list_type">ListType</string>
    <string name="list_Product">Products</string>
    <string name="list_Brand">Brands</string>
    <string name="list_categories">ProductCategories</string>
    <string name="list_Sub_categories">ProductSubCategories</string>
    <string name="list_model">ProductModel</string>
    <string name="list_repair_type">RepairType</string>
    <string name="add_invovice">Invoice</string>

    <string name="schedule_service">ServiceSchedule</string>

    <string name="title_activity_product_description">ProductDescriptionActivity</string>
    <string name="title_activity_product_details_and_services">Clic Serve
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_clicafe">Clic Safe</string>
    <string name="action_clicpay">Clic Save</string>
    <string name="action_shareClic">Share Clic</string>
    <string name="action_sharedProfiles">Shared profile</string>
    <string name="action_recommendClic">Recommend Clic</string>
    <string name="action_Notifications">Notifications</string>
    <string name="action_Rentals">Rentals</string>
    <string name="action_Home">Home</string>
    <string name="action_logout">Logout</string>


    <string name="parcel_products">parcelProducts</string>
    <string name="parcel_categories">parcelCategories</string>
    <string name="parcel_sub_cat">parcelSubCat</string>
    <string name="parcel_model">parcelModel</string>
    <string name="parcel_item">parcelItem</string>
    <string name="parcel_repiar_type">parceReqType</string>
    <string name="parcel_repiar_type_req">parceReqTypeReq</string>
    <string name="parcel_service_type">parceServiceType</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blank">BlankActivity</string>



    <string name="help_shift_appID">clicserve_platform_20160705170208583-3156dd505959057</string>
    <string name="help_shift_apikey">4b3ad5b53addfcf1a0e54fc98fafbbfb</string>
    <string name="help_shift_domainName">clicserve.helpshift.com</string>
    <string name="title_activity_clic_activity_home">ClicActivityHome</string>


    <string name="err_select_documenttype">Please select a document type</string>
    <string name="title_activity_blur">BlurActivity</string>
    <string name="product_added_success_status">"Product Added Successfully!"</string>
    <string name="service_added_success_status">"Service Request Added Successfully!"</string>
</resources>
